PROJEKT/antlr/projectParser.py
# Generated from project.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class projectParser ( Parser ):

    grammarFileName = "project.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "'('", "'='", "'read'", 
                     "'write'", "'else'", "'if'", "'while'", "'for'", "')'", 
                     "';'", "','", "'.'", "'*'", "'/'", "'%'", "'+'", "'-'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'!'", 
                     "'&&'", "'||'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "RPar", "SEMICOLON", 
                      "COMMA", "DOT", "MUL", "DIV", "MOD", "ADD", "SUB", 
                      "EQUAL", "NOT_EQUAL", "LESS", "GREATER", "LESS_EQUAL", 
                      "GREATER_EQUAL", "NOT", "AND", "OR", "TYPE_IDENTIFIER", 
                      "INT", "FLOAT", "BOOL", "STRING_LITERAL", "ID", "COMMENT", 
                      "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_block = 2
    RULE_statementList = 3
    RULE_expression = 4
    RULE_readCommand = 5
    RULE_writeCommand = 6
    RULE_elseStatement = 7
    RULE_condition = 8
    RULE_conditionWithoutBrackets = 9
    RULE_loop = 10
    RULE_forLoop = 11
    RULE_variableDeclaration = 12
    RULE_relationalOperations = 13

    ruleNames =  [ "program", "statement", "block", "statementList", "expression", 
                   "readCommand", "writeCommand", "elseStatement", "condition", 
                   "conditionWithoutBrackets", "loop", "forLoop", "variableDeclaration", 
                   "relationalOperations" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    RPar=11
    SEMICOLON=12
    COMMA=13
    DOT=14
    MUL=15
    DIV=16
    MOD=17
    ADD=18
    SUB=19
    EQUAL=20
    NOT_EQUAL=21
    LESS=22
    GREATER=23
    LESS_EQUAL=24
    GREATER_EQUAL=25
    NOT=26
    AND=27
    OR=28
    TYPE_IDENTIFIER=29
    INT=30
    FLOAT=31
    BOOL=32
    STRING_LITERAL=33
    ID=34
    COMMENT=35
    WS=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(projectParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(projectParser.StatementContext)
            else:
                return self.getTypedRuleContext(projectParser.StatementContext,i)


        def getRuleIndex(self):
            return projectParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = projectParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 28
                self.statement()
                self.state = 31 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << projectParser.T__0) | (1 << projectParser.T__2) | (1 << projectParser.T__4) | (1 << projectParser.T__5) | (1 << projectParser.T__7) | (1 << projectParser.T__8) | (1 << projectParser.T__9) | (1 << projectParser.SEMICOLON) | (1 << projectParser.SUB) | (1 << projectParser.NOT) | (1 << projectParser.TYPE_IDENTIFIER) | (1 << projectParser.INT) | (1 << projectParser.FLOAT) | (1 << projectParser.BOOL) | (1 << projectParser.STRING_LITERAL) | (1 << projectParser.ID))) != 0)):
                    break

            self.state = 33
            self.match(projectParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.emptyCommand = None # Token

        def SEMICOLON(self):
            return self.getToken(projectParser.SEMICOLON, 0)

        def variableDeclaration(self):
            return self.getTypedRuleContext(projectParser.VariableDeclarationContext,0)


        def writeCommand(self):
            return self.getTypedRuleContext(projectParser.WriteCommandContext,0)


        def readCommand(self):
            return self.getTypedRuleContext(projectParser.ReadCommandContext,0)


        def conditionWithoutBrackets(self):
            return self.getTypedRuleContext(projectParser.ConditionWithoutBracketsContext,0)


        def condition(self):
            return self.getTypedRuleContext(projectParser.ConditionContext,0)


        def loop(self):
            return self.getTypedRuleContext(projectParser.LoopContext,0)


        def forLoop(self):
            return self.getTypedRuleContext(projectParser.ForLoopContext,0)


        def expression(self):
            return self.getTypedRuleContext(projectParser.ExpressionContext,0)


        def block(self):
            return self.getTypedRuleContext(projectParser.BlockContext,0)


        def getRuleIndex(self):
            return projectParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = projectParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 47
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 35
                localctx.emptyCommand = self.match(projectParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 36
                self.variableDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 37
                self.writeCommand()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 38
                self.readCommand()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 39
                self.conditionWithoutBrackets()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 40
                self.condition()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 41
                self.loop()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 42
                self.forLoop()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 43
                self.expression(0)
                self.state = 44
                self.match(projectParser.SEMICOLON)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 46
                self.block()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statementList(self):
            return self.getTypedRuleContext(projectParser.StatementListContext,0)


        def getRuleIndex(self):
            return projectParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = projectParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(projectParser.T__0)
            self.state = 50
            self.statementList()
            self.state = 51
            self.match(projectParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(projectParser.StatementContext)
            else:
                return self.getTypedRuleContext(projectParser.StatementContext,i)


        def getRuleIndex(self):
            return projectParser.RULE_statementList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementList" ):
                listener.enterStatementList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementList" ):
                listener.exitStatementList(self)




    def statementList(self):

        localctx = projectParser.StatementListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statementList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.statement()
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << projectParser.T__0) | (1 << projectParser.T__2) | (1 << projectParser.T__4) | (1 << projectParser.T__5) | (1 << projectParser.T__7) | (1 << projectParser.T__8) | (1 << projectParser.T__9) | (1 << projectParser.SEMICOLON) | (1 << projectParser.SUB) | (1 << projectParser.NOT) | (1 << projectParser.TYPE_IDENTIFIER) | (1 << projectParser.INT) | (1 << projectParser.FLOAT) | (1 << projectParser.BOOL) | (1 << projectParser.STRING_LITERAL) | (1 << projectParser.ID))) != 0):
                self.state = 54
                self.statement()
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return projectParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ModContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a projectParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(projectParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(projectParser.ExpressionContext,i)

        def MOD(self):
            return self.getToken(projectParser.MOD, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMod" ):
                listener.enterMod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMod" ):
                listener.exitMod(self)


    class OrContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a projectParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(projectParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(projectParser.ExpressionContext,i)

        def OR(self):
            return self.getToken(projectParser.OR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOr" ):
                listener.enterOr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOr" ):
                listener.exitOr(self)


    class BoolContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a projectParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BOOL(self):
            return self.getToken(projectParser.BOOL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBool" ):
                listener.enterBool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBool" ):
                listener.exitBool(self)


    class StringContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a projectParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING_LITERAL(self):
            return self.getToken(projectParser.STRING_LITERAL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)


    class AssignmentContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a projectParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(projectParser.ID, 0)
        def expression(self):
            return self.getTypedRuleContext(projectParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)


    class NegativeUnaryContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a projectParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(projectParser.ExpressionContext,0)

        def SUB(self):
            return self.getToken(projectParser.SUB, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNegativeUnary" ):
                listener.enterNegativeUnary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNegativeUnary" ):
                listener.exitNegativeUnary(self)


    class NotEqualContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a projectParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(projectParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(projectParser.ExpressionContext,i)

        def NOT_EQUAL(self):
            return self.getToken(projectParser.NOT_EQUAL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNotEqual" ):
                listener.enterNotEqual(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNotEqual" ):
                listener.exitNotEqual(self)


    class AddSubContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a projectParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(projectParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(projectParser.ExpressionContext,i)

        def ADD(self):
            return self.getToken(projectParser.ADD, 0)
        def SUB(self):
            return self.getToken(projectParser.SUB, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddSub" ):
                listener.enterAddSub(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddSub" ):
                listener.exitAddSub(self)


    class ConcatContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a projectParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(projectParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(projectParser.ExpressionContext,i)

        def DOT(self):
            return self.getToken(projectParser.DOT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConcat" ):
                listener.enterConcat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConcat" ):
                listener.exitConcat(self)


    class LessContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a projectParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(projectParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(projectParser.ExpressionContext,i)

        def LESS(self):
            return self.getToken(projectParser.LESS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLess" ):
                listener.enterLess(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLess" ):
                listener.exitLess(self)


    class FloatContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a projectParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FLOAT(self):
            return self.getToken(projectParser.FLOAT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloat" ):
                listener.enterFloat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloat" ):
                listener.exitFloat(self)


    class ParenthesisContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a projectParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(projectParser.ExpressionContext,0)

        def RPar(self):
            return self.getToken(projectParser.RPar, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParenthesis" ):
                listener.enterParenthesis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParenthesis" ):
                listener.exitParenthesis(self)


    class IntContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a projectParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(projectParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInt" ):
                listener.enterInt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInt" ):
                listener.exitInt(self)


    class MulDivContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a projectParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(projectParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(projectParser.ExpressionContext,i)

        def MUL(self):
            return self.getToken(projectParser.MUL, 0)
        def DIV(self):
            return self.getToken(projectParser.DIV, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulDiv" ):
                listener.enterMulDiv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulDiv" ):
                listener.exitMulDiv(self)


    class EqualContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a projectParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(projectParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(projectParser.ExpressionContext,i)

        def EQUAL(self):
            return self.getToken(projectParser.EQUAL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEqual" ):
                listener.enterEqual(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEqual" ):
                listener.exitEqual(self)


    class NotContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a projectParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(projectParser.ExpressionContext,0)

        def NOT(self):
            return self.getToken(projectParser.NOT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNot" ):
                listener.enterNot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNot" ):
                listener.exitNot(self)


    class AndContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a projectParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(projectParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(projectParser.ExpressionContext,i)

        def AND(self):
            return self.getToken(projectParser.AND, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnd" ):
                listener.enterAnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnd" ):
                listener.exitAnd(self)


    class GreaterEqualContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a projectParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(projectParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(projectParser.ExpressionContext,i)

        def GREATER_EQUAL(self):
            return self.getToken(projectParser.GREATER_EQUAL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGreaterEqual" ):
                listener.enterGreaterEqual(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGreaterEqual" ):
                listener.exitGreaterEqual(self)


    class IdContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a projectParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(projectParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId" ):
                listener.enterId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId" ):
                listener.exitId(self)


    class LessEqualContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a projectParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(projectParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(projectParser.ExpressionContext,i)

        def LESS_EQUAL(self):
            return self.getToken(projectParser.LESS_EQUAL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLessEqual" ):
                listener.enterLessEqual(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLessEqual" ):
                listener.exitLessEqual(self)


    class GreaterContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a projectParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(projectParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(projectParser.ExpressionContext,i)

        def GREATER(self):
            return self.getToken(projectParser.GREATER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGreater" ):
                listener.enterGreater(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGreater" ):
                listener.exitGreater(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = projectParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = projectParser.IntContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 61
                self.match(projectParser.INT)
                pass

            elif la_ == 2:
                localctx = projectParser.ParenthesisContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 62
                self.match(projectParser.T__2)
                self.state = 63
                self.expression(0)
                self.state = 64
                self.match(projectParser.RPar)
                pass

            elif la_ == 3:
                localctx = projectParser.FloatContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 66
                self.match(projectParser.FLOAT)
                pass

            elif la_ == 4:
                localctx = projectParser.BoolContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 67
                self.match(projectParser.BOOL)
                pass

            elif la_ == 5:
                localctx = projectParser.NotContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 68
                localctx.op = self.match(projectParser.NOT)
                self.state = 69
                self.expression(17)
                pass

            elif la_ == 6:
                localctx = projectParser.NegativeUnaryContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 70
                localctx.op = self.match(projectParser.SUB)
                self.state = 71
                self.expression(16)
                pass

            elif la_ == 7:
                localctx = projectParser.StringContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 72
                self.match(projectParser.STRING_LITERAL)
                pass

            elif la_ == 8:
                localctx = projectParser.IdContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 73
                self.match(projectParser.ID)
                pass

            elif la_ == 9:
                localctx = projectParser.AssignmentContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 74
                self.match(projectParser.ID)
                self.state = 75
                localctx.op = self.match(projectParser.T__3)
                self.state = 76
                self.expression(7)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 117
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 115
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        localctx = projectParser.MulDivContext(self, projectParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 79
                        if not self.precpred(self._ctx, 13):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 13)")
                        self.state = 80
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==projectParser.MUL or _la==projectParser.DIV):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 81
                        self.expression(14)
                        pass

                    elif la_ == 2:
                        localctx = projectParser.AddSubContext(self, projectParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 82
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 83
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==projectParser.ADD or _la==projectParser.SUB):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 84
                        self.expression(13)
                        pass

                    elif la_ == 3:
                        localctx = projectParser.ModContext(self, projectParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 85
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 86
                        localctx.op = self.match(projectParser.MOD)
                        self.state = 87
                        self.expression(12)
                        pass

                    elif la_ == 4:
                        localctx = projectParser.AndContext(self, projectParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 88
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 89
                        localctx.op = self.match(projectParser.AND)
                        self.state = 90
                        self.expression(11)
                        pass
